--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@
 
 .header {
   display: flex;
-  max-height: 10vh;
+  max-height: 12.5vh;
   font-size: 2.4em;
-  text-align: center;
+  background-color: black;
+  align-content: center;
 }
 .header .logo {
   margin-left: auto;
