--- a/style.css
+++ b/style.css
@@ -35,4 +35,6 @@
   text-justify: center;
   font-size: 15vh;
   color: blueviolet;
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.5);
+
 }/*# sourceMappingURL=style.css.map */
